--- a/shared/toolbar.css
+++ b/shared/toolbar.css
@@ -81,6 +81,16 @@ body {
   left: 4px;
 }
 
+.toolbar button.circle:after {
+  content: 'O';
+  width: 15px;
+  height: 15px;
+  border: 0px solid red;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+}
+
 .toolbar button.highlight:after {
   width: 17px;
   height: 17px;
