--- a/shared/toolbar.css
+++ b/shared/toolbar.css
@@ -128,6 +128,6 @@ body {
   margin-left: -2px;
   margin-right: -2px;
 }
-.text-color, .pen-color {
+.text-color, .pen-color, .hotspot-color {
   display: inline-block;
 }
